fix <Result> inline spacing

--- a/src/components/Result/index.module.scss
+++ b/src/components/Result/index.module.scss
@@ -1,3 +1,3 @@
 .main {
-
+	margin: 0 var(--output-inline-spacing);
 }
